host-base-routing-ingrs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-site-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: website1.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website1-service
            port:
              number: 80
  - host: website2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website2-service
            port:
              number: 80
